// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RatingStars snapshots rating 0 should match snapshot 1`] = `
<scale-rating-stars rating="0">
  <mock:shadow-root>
    <div aria-describedby="rating__description" aria-labelledby="rating__label" class="rating" id="rating" role="figure" tabindex="0">
      <label class="rating__label" id="rating__label"></label>
      <span hidden="" id="rating__description">
        0 out of 5 stars
      </span>
      <span class="rating__symbols">
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-1" role="presentation">
            <scale-icon-action-favorite color="var(--scl-color-grey-50)" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-2" role="presentation">
            <scale-icon-action-favorite color="var(--scl-color-grey-50)" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-3" role="presentation">
            <scale-icon-action-favorite color="var(--scl-color-grey-50)" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-4" role="presentation">
            <scale-icon-action-favorite color="var(--scl-color-grey-50)" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-5" role="presentation">
            <scale-icon-action-favorite color="var(--scl-color-grey-50)" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
      </span>
      <span class="rating__symbols rating__symbols--indicator">
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" style="clip-path: inset(0 100% 0 0);">
            <scale-icon-action-favorite color="var(--scl-color-primary)" selected="" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" style="clip-path: inset(0 200% 0 0);">
            <scale-icon-action-favorite color="var(--scl-color-primary)" selected="" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" style="clip-path: inset(0 300% 0 0);">
            <scale-icon-action-favorite color="var(--scl-color-primary)" selected="" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" style="clip-path: inset(0 400% 0 0);">
            <scale-icon-action-favorite color="var(--scl-color-primary)" selected="" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" style="clip-path: inset(0 500% 0 0);">
            <scale-icon-action-favorite color="var(--scl-color-primary)" selected="" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
      </span>
    </div>
  </mock:shadow-root>
</scale-rating-stars>
`;

exports[`RatingStars snapshots rating 2 and disabled should match snapshot 1`] = `
<scale-rating-stars disabled="" rating="2">
  <mock:shadow-root>
    <div aria-describedby="rating__description" aria-labelledby="rating__label" class="rating rating--disabled" id="rating" role="figure" tabindex="-1">
      <label class="rating__label" id="rating__label"></label>
      <span hidden="" id="rating__description">
        2 out of 5 stars
      </span>
      <span class="rating__symbols">
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-1" role="presentation" style="clip-path: inset(0 200% 0 0);">
            <scale-icon-action-favorite color="var(--scl-color-grey-50)" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-2" role="presentation" style="clip-path: inset(0 100% 0 0);">
            <scale-icon-action-favorite color="var(--scl-color-grey-50)" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-3" role="presentation">
            <scale-icon-action-favorite color="var(--scl-color-grey-50)" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-4" role="presentation">
            <scale-icon-action-favorite color="var(--scl-color-grey-50)" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-5" role="presentation">
            <scale-icon-action-favorite color="var(--scl-color-grey-50)" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
      </span>
      <span class="rating__symbols rating__symbols--indicator">
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol">
            <scale-icon-action-favorite color="var(--scl-color-primary)" selected="" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" style="clip-path: inset(0 0% 0 0);">
            <scale-icon-action-favorite color="var(--scl-color-primary)" selected="" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" style="clip-path: inset(0 100% 0 0);">
            <scale-icon-action-favorite color="var(--scl-color-primary)" selected="" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" style="clip-path: inset(0 200% 0 0);">
            <scale-icon-action-favorite color="var(--scl-color-primary)" selected="" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" style="clip-path: inset(0 300% 0 0);">
            <scale-icon-action-favorite color="var(--scl-color-primary)" selected="" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
      </span>
    </div>
  </mock:shadow-root>
</scale-rating-stars>
`;

exports[`RatingStars snapshots rating 3 should match snapshot 1`] = `
<scale-rating-stars rating="3">
  <mock:shadow-root>
    <div aria-describedby="rating__description" aria-labelledby="rating__label" class="rating" id="rating" role="figure" tabindex="0">
      <label class="rating__label" id="rating__label"></label>
      <span hidden="" id="rating__description">
        3 out of 5 stars
      </span>
      <span class="rating__symbols">
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-1" role="presentation" style="clip-path: inset(0 300% 0 0);">
            <scale-icon-action-favorite color="var(--scl-color-grey-50)" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-2" role="presentation" style="clip-path: inset(0 200% 0 0);">
            <scale-icon-action-favorite color="var(--scl-color-grey-50)" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-3" role="presentation" style="clip-path: inset(0 100% 0 0);">
            <scale-icon-action-favorite color="var(--scl-color-grey-50)" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-4" role="presentation">
            <scale-icon-action-favorite color="var(--scl-color-grey-50)" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-5" role="presentation">
            <scale-icon-action-favorite color="var(--scl-color-grey-50)" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
      </span>
      <span class="rating__symbols rating__symbols--indicator">
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol">
            <scale-icon-action-favorite color="var(--scl-color-primary)" selected="" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol">
            <scale-icon-action-favorite color="var(--scl-color-primary)" selected="" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" style="clip-path: inset(0 0% 0 0);">
            <scale-icon-action-favorite color="var(--scl-color-primary)" selected="" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" style="clip-path: inset(0 100% 0 0);">
            <scale-icon-action-favorite color="var(--scl-color-primary)" selected="" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" style="clip-path: inset(0 200% 0 0);">
            <scale-icon-action-favorite color="var(--scl-color-primary)" selected="" size="24px"></scale-icon-action-favorite>
          </span>
        </span>
      </span>
    </div>
  </mock:shadow-root>
</scale-rating-stars>
`;

exports[`RatingStars snapshots rating 4 and small should match snapshot 1`] = `
<scale-rating-stars rating="4" small="">
  <mock:shadow-root>
    <div aria-describedby="rating__description" aria-labelledby="rating__label" class="rating rating--small" id="rating" role="figure" tabindex="0">
      <label class="rating__label" id="rating__label"></label>
      <span hidden="" id="rating__description">
        4 out of 5 stars
      </span>
      <span class="rating__symbols">
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-1" role="presentation" style="clip-path: inset(0 400% 0 0);">
            <scale-icon-action-favorite color="var(--scl-color-grey-50)" size="16px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-2" role="presentation" style="clip-path: inset(0 300% 0 0);">
            <scale-icon-action-favorite color="var(--scl-color-grey-50)" size="16px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-3" role="presentation" style="clip-path: inset(0 200% 0 0);">
            <scale-icon-action-favorite color="var(--scl-color-grey-50)" size="16px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-4" role="presentation" style="clip-path: inset(0 100% 0 0);">
            <scale-icon-action-favorite color="var(--scl-color-grey-50)" size="16px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" id="star-5" role="presentation">
            <scale-icon-action-favorite color="var(--scl-color-grey-50)" size="16px"></scale-icon-action-favorite>
          </span>
        </span>
      </span>
      <span class="rating__symbols rating__symbols--indicator">
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol">
            <scale-icon-action-favorite color="var(--scl-color-primary)" selected="" size="16px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol">
            <scale-icon-action-favorite color="var(--scl-color-primary)" selected="" size="16px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol">
            <scale-icon-action-favorite color="var(--scl-color-primary)" selected="" size="16px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" style="clip-path: inset(0 0% 0 0);">
            <scale-icon-action-favorite color="var(--scl-color-primary)" selected="" size="16px"></scale-icon-action-favorite>
          </span>
        </span>
        <span class="rating__symbol__wrapper">
          <span class="rating__symbol" style="clip-path: inset(0 100% 0 0);">
            <scale-icon-action-favorite color="var(--scl-color-primary)" selected="" size="16px"></scale-icon-action-favorite>
          </span>
        </span>
      </span>
    </div>
  </mock:shadow-root>
</scale-rating-stars>
`;
